# sp-backend

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  structure.txt
alembic/: env.py
alembic/versions/: 015c6c6aa312_fix_category_table.py  048fc0dcd14f_users_table.py  089e325d9bde_initial.py  0f3509e444dc_fix_category_table.py  0f43e4336c1f_fix_group_buy_table.py  11ac929db977_add_files_reple_table.py  154ad97320db_users_table.py  220e1b027555_fix_category_table.py  232ce7777a48_group_buy_table.py  2927a9ca6e9f_add_files_topic_table.py  2c0bfc67fe4a_forum_table.py  375a90422ac5_fix_category_table.py  3a13e14669f3_migration.py  3b278c4a9f23_add_files_topic_table.py  416e0bc5beb6_activity_table.py  41dd5bd33c54_admin_table.py  4a3470973b96_users_table.py  4acbb6e914b6_sp_table.py  4b674f876d0e_users_table.py  4b842d4e167b_users_table.py  4fdc67dadfe7_user_roles_table.py  51b0018dc3e0_user_roles_table.py  5723434ce1a5_activity_table.py  5b397e626fa6_users_table.py  5d693bb400b4_user_roles_table.py  68f48e7d45ac_activity_table.py  6949493bc2d5_sp_table.py  69b32f0c84a8_sp_table.py  69c730899e96_user_roles_table.py  6dffe468ebac_admin_table.py  6e217a69fb75_fix_topic_table.py  74bf0b81af5d_fix_topic_table.py  7919dae4be99_fix_group_buy_table.py  86a265942bd3_user_roles_table.py  880ab5b9871b_users_table.py  8b18fc715879_forum_table.py  98230460b3f6_users_table.py  9923f45ff8c4_migration.py  99940cc991dc_forum_table.py  9eb7cff252d0_fix_category_table.py  (+30 more)
app/: main.py
app/api/: deps.py  router.py
app/core/: config.py  exceptions.py  security.py
(+49 files in other folders)
